# nordic

./: .gitignore
app_event_manager/: CMakeLists.txt  prj.conf  sample.yaml
app_event_manager/src/: main.c
blinky/src/: main.c
logger/: Kconfig  prj.conf
logger/boards/: nrf52840dk_nrf52840.conf
logger/src/: main.c  sample_module.c
nordic-academy/nrf-fundamentals/lesson7/fund_less7_exer1_solution/src/: main.c
sandbox/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
sandbox/src/: led.h  main.c  timer.c
sandbox/src/core/: timer.c  util.c
sandbox/src/ui/: buttons.c  buttons.h  keypad.c  keypad.h  pixels.c  pixels.h
threads/: prj.conf
threads/src/: main.c
uart/: CMakeLists.txt  prj.conf
uart/src/: keypad.c  keypad.h  led.c  led.h  main.c  timer.c  util.c
